# genCmake

./: .env.txt  CMakeCache.txt  CMakeLists.txt  Makefile  MyProject.sln  cmake_install.cmake
project/src/: file2.c  main.c
